--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Data Source=DESKTOP-1JUJ8N6\\MSSQLSERVER2;Initial Catalog=GoWorkDemo;Integrated Security=True;Trust Server Certificate=True"
   },
 
   "Logging": {
