--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-1JUJ8N6\\MSSQLSERVER2;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True",
+    "DefaultConnection": "Data Source=DESKTOP-1JUJ8N6\\MSSQLSERVER2;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True",
     //"DefaultConnection": "Server=\tdb38550.public.databaseasp.net; Database=db38550; User Id=db38550; Password=6y?T!8HhqN@3; Encrypt=False; MultipleActiveResultSets=True;",
-    "DefaultConnection": "Data Source=.;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True"
   },
 
   "Logging": {
