--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-1JUJ8N6\\MSSQLSERVER2;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True",
+    "DefaultConnection": "Data Source=DESKTOP-1JUJ8N6\\MSSQLSERVER2;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True"
     //"DefaultConnection": "Server=\tdb38550.public.databaseasp.net; Database=db38550; User Id=db38550; Password=6y?T!8HhqN@3; Encrypt=False; MultipleActiveResultSets=True;",
     //"DefaultConnection": "Data Source=.;Initial Catalog=GoWorkDB;Integrated Security=True;Trust Server Certificate=True"
   },
@@ -17,5 +17,14 @@
     "Issuer": "https://itlegend.net/",
     "Audience": "https://itlegend.net/",
     "Key": "0130BDC6-1B22-4BAD-8B8A-4B2A38740224"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "GoWork App",
+    "SenderEmail": "osama.mb7@gmail.com",
+    "Username": "osama.mb7@gmail.com",
+    "Password": "uaki aqfr flmr romv"
   }
 }
