add file service

--- a/appsettings.json
+++ b/appsettings.json
@@ -26,5 +26,14 @@
     "SenderEmail": "osama.mb7@gmail.com",
     "Username": "osama.mb7@gmail.com",
     "Password": "uaki aqfr flmr romv"
+  },
+
+  "AzureBlob": {
+    "StorageAccount": "",
+    "AccessKey": "",
+    "ContainerName": "",
+    "MaxFileSizeMB": 1,
+    "AllowedImages": [ "image/jpeg", "image/png", "image/webp" ],
+    "AllowedResumes": [ "application/pdf" ]
   }
 }
