Make Forget and reset password endpoints

--- a/appsettings.json
+++ b/appsettings.json
@@ -35,5 +35,8 @@
     "MaxFileSizeMB": 1,
     "AllowedImages": [ "image/jpeg", "image/png", "image/webp" ],
     "AllowedResumes": [ "application/pdf" ]
+  },
+  "Frontend": {
+    "BaseUrl": "https://go-work-next-js.vercel.app/new-password"
   }
 }
